--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "node demo/app.js",
     "build": "node_modules/rollup/bin/rollup -c",
-    "test": "node_modules/rollup/bin/rollup -c && node_modules/karma/bin/karma start karma.conf.js"
+    "test": "node_modules/rollup/bin/rollup -c && node_modules/karma/bin/karma start karma.conf.js",
+    "lint": "node_modules/eslint/bin/eslint.js src/**"
   },
   "devDependencies": {
+    "eslint": "^5.2.0",
     "glob": "7.1.2",
     "install": "^0.12.1",
     "jasmine-core": "3.1.0",
