--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "@ceddl/ceddl-polyfill",
   "version": "0.9.0",
   "description": "customer experience digital data layer polyfill. Bridging the gap between the 2015 ceddl spec and the browsers",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ceddl/ceddl-polyfill"
+  },
+  "author": {
+    "name": "Roland Broekema"
+  },
   "main": "index.js",
   "scripts": {
     "dev": "copyfiles -u 4 node_modules/@ceddl/ceddl-aditional-inputs/dist/*.js demo/js/aditional-inputs/ && node demo/app.js",
