--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ceddl/ceddl-polyfill",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "customer experience digital data layer polyfill. Bridging the gap between the 2015 ceddl spec and the browsers",
   "repository": {
     "type": "git",
@@ -9,7 +9,7 @@
   "author": {
     "name": "Roland Broekema"
   },
-  "main": "index.js",
+  "main": "/dist/index.min.js",
   "scripts": {
     "dev": "copyfiles -u 4 node_modules/@ceddl/ceddl-aditional-inputs/dist/*.js demo/js/aditional-inputs/ && node demo/app.js",
     "build": "node_modules/rollup/bin/rollup -c && node_modules/uglify-js/bin/uglifyjs -o dist/index.min.js -- dist/index.js",
