saving working tests without coverage report

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "main": "/dist/index.min.js",
   "scripts": {
     "dev": "copyfiles -u 4 node_modules/@ceddl/ceddl-aditional-inputs/dist/*.js demo/js/aditional-inputs/ && node demo/app.js",
-    "build": "node_modules/rollup/bin/rollup -c && node_modules/uglify-js/bin/uglifyjs -o dist/index.min.js -- dist/index.js",
-    "test": "node_modules/rollup/bin/rollup -c && node_modules/karma/bin/karma start karma.conf.js",
+    "build": "rollup -c && node_modules/uglify-js/bin/uglifyjs -o dist/index.min.js -- dist/index.js",
+    "test": "rollup -c && node_modules/karma/bin/karma start karma.conf.js",
     "lint": "node_modules/eslint/bin/eslint.js src/**"
   },
   "devDependencies": {
@@ -22,21 +22,17 @@
     "copyfiles": "^2.0.0",
     "eslint": "^7.2.0",
     "glob": "7.1.2",
-    "install": "^0.12.1",
-    "jasmine-core": "3.1.0",
-    "karma": "2.0.4",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "1.1.2",
-    "karma-jasmine": "1.1.2",
-    "karma-phantomjs-launcher": "1.0.4",
-    "karma-rollup-preprocessor": "^6.0.0",
+    "jasmine": "^3.5.0",
+    "karma": "^5.0.9",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-rollup-preprocessor": "^7.0.5",
     "karma-sinon": "^1.0.5",
-    "karma-spec-reporter": "0.0.32",
     "node-static": "^0.7.10",
-    "npm": "^6.2.0",
-    "rollup": "^0.62.0",
-    "rollup-plugin-istanbul": "^2.0.1",
-    "sinon": "^6.1.4",
+    "nyc": "^15.1.0",
+    "rollup": "^2.15.0",
+    "sinon": "^9.0.2",
     "uglify-js": "^3.4.7"
   },
   "dependencies": {}
