--- a/package.json
+++ b/package.json
@@ -10,30 +10,35 @@
   "author": {
     "name": "Roland Broekema"
   },
-  "main": "/dist/index.min.js",
+  "main": "/dist/index.esm.js",
   "scripts": {
     "dev": "copyfiles -u 4 node_modules/@ceddl/ceddl-aditional-inputs/dist/*.js demo/js/aditional-inputs/ && node demo/app.js",
     "build": "rollup -c && node_modules/uglify-js/bin/uglifyjs -o dist/index.min.js -- dist/index.js",
     "test": "rollup -c && node_modules/karma/bin/karma start karma.conf.js",
-    "lint": "node_modules/eslint/bin/eslint.js src/**"
+    "lint": "node_modules/eslint/bin/eslint.js src/**",
+    "typescript": "rollup --config rollup.ts.config.js",
+    "d.ts": "tsc dist/index.esm.js --declaration --allowJs --emitDeclarationOnly --outDir types"
   },
   "devDependencies": {
     "@ceddl/ceddl-aditional-inputs": "^0.9.3",
-    "copyfiles": "^2.0.0",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^7.2.0",
-    "glob": "7.1.2",
-    "jasmine": "^3.5.0",
-    "karma": "^5.0.9",
+    "glob": "7.2.0",
+    "jasmine": "^3.10.0",
+    "karma": "^6.3.6",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-jasmine": "^3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "karma-rollup-preprocessor": "^7.0.5",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-rollup-preprocessor": "^7.0.7",
     "karma-sinon": "^1.0.5",
-    "node-static": "^0.7.10",
+    "node-static": "^0.7.11",
     "nyc": "^15.1.0",
-    "rollup": "^2.15.0",
-    "sinon": "^9.0.2",
-    "uglify-js": "^3.4.7"
+    "rollup": "^2.59.0",
+    "sinon": "^11.1.2",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4",
+    "uglify-js": "^3.14.2"
   },
   "dependencies": {}
 }
