testing with npm link

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": false,
     "outDir": "output",
     "rootDir": "./",
+    "typeRoots": ["./types"]
   }
 ,
   "include": ["./test/**/*.ts"]
