typescipt definition changes after comments on DefinitelyTyped

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,11 @@
     "esModuleInterop": false,
     "outDir": "output",
     "rootDir": "./",
-    "typeRoots": [ "./types", "./node_modules/@types" ]
+    "typeRoots": [ "./types", "./node_modules/@types" ],
+    "paths": {
+      "@ceddl/*": ["ceddl__*"]
+    }
   },
-  "include": ["./test/**/*.ts", "./types/*.ts"]
+  "include": ["./test/**/*.ts", "./types/**/*.ts"]
 }
 
