--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "main": "/dist/index.js",
   "module": "/src/index.js",
-  "jsnext:main": "src/index.js",
+  "jsnext:main": "/src/index.js",
+  "typings": "/types/index.d.ts",
   "files": [
     "src",
     "lib",
@@ -23,9 +24,7 @@
     "dev": "copyfiles -u 4 node_modules/@ceddl/ceddl-aditional-inputs/dist/*.js demo/js/aditional-inputs/ && node demo/app.js",
     "build": "rollup -c && node_modules/uglify-js/bin/uglifyjs -o dist/index.min.js -- dist/index.js",
     "test": "rollup -c && node_modules/karma/bin/karma start karma.conf.js",
-    "lint": "node_modules/eslint/bin/eslint.js src/**",
-    "typescript": "rollup --config rollup.ts.config.js",
-    "d.ts": "tsc src/index.js --declaration --allowJs --emitDeclarationOnly --outDir types"
+    "lint": "node_modules/eslint/bin/eslint.js src/**"
   },
   "devDependencies": {
     "@ceddl/ceddl-polyfill": "^0.9.4",
