--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ceddl/ceddl-polyfill",
-  "version": "0.9.8",
+  "version": "0.9.9",
   "description": "customer experience digital data layer polyfill. Bridging the gap between the 2015 ceddl spec and the browsers",
   "repository": {
     "type": "git",
@@ -13,12 +13,12 @@
   "main": "/dist/index.js",
   "module": "/src/index.js",
   "jsnext:main": "/src/index.js",
-  "typings": "/types/ceddl__ceddl-polyfill/index.d.ts",
+  "types": "index.d.ts",
   "files": [
     "src",
     "lib",
     "dist",
-    "types"
+    "index.d.ts"
   ],
   "scripts": {
     "link": "npm link @ceddl/ceddl-polyfill",
